Revision history for Perl extension App::Followme

{{$NEXT}}

1.13 2015-06-04T23:12:11Z
    - make other modules optional

1.12 2015-05-25T00:22:22Z
    - updated code to generate initial website
    - added CreateGallery module to create photo galleries
    - added EditSections module to edit section tags on website
    - added bundle.pl script to modify initial website

1.11 2014-12-08T00:04:05Z
    - modified UploadSite: cd to top directory before run
    - modified UploadSite: fix checksum computation

1.10 2014-05-05T15:26:10Z
    - updated template handling code to match Template::Twostep
    - change get_template to use current version of file to be rendered

1.09 2014-04-21T23:40:09Z
    - Fixed typos
    - added each command to Template

1.07 2014-04-11T23:06:54Z
    - Updated documentation
    - Changed tests for better error reporting

1.06 2014-04-05T22:24:20Z
    - Bug fix, moved check for file existence in is_newer
    - Separated news index creation into its own method, create_news_indexes

1.05 2014-04-03T23:29:36Z
    - Rewrote is_newer, deleted index_is_newer
    - Added newlines to end of lines in parse_section

1.04 2014-03-30T22:42:16Z
    - Revised and corrected documentation
    - Rewrote object creation code
    - Changed calling sequence to most_recent_file
    - Moved match_file out of visit
    - Replaced EveryFile with ConfiguredObject
    - Renamed HandleSite to Module
    - Revised code in index_is_newer

1.03 2014-03-08T23:46:39Z
    - Check for undefined names in same_file, return false if found
    - Fixed bug in get_excluded_directories, wrong parameter used
    - Removed the Mock package
    - New module to replace Mock, CreateSitemap
    - Simplify templates produced by --init flag

1.02 2014-03-07T00:02:15Z
    - Rewrote UpdateFtp and modified UpdateSite

1.01 2014-03-04T00:32:07Z
    - Add a config file for current directory to list of config files

1.00 2014-03-03T02:27:05Z