@@ -5,4 +5,5 @@ recommends 'Text::Markdown', '1.000031';
 
 on 'test' => sub {
     requires 'Test::More', '0.98';
+    requires => 'Test::Requires', 0;
 };
