@@ -6,6 +6,7 @@ use IO::File;
 use File::Path qw(rmtree);
 use File::Spec::Functions qw(catfile catdir rel2abs splitdir);
 
+use Test::Requires 'Text::Markdown';
 use Test::More tests => 15;
 
 #----------------------------------------------------------------------
@@ -48,10 +49,10 @@ do {
     my $text = "This is the top page\n";
     $followme->write_page('index.md', $text);
     $followme->run($test_dir);
-    
+
     ok(-e 'index.html', 'Index file created'); #test 4
     ok(! -e 'index.md', 'Text file deleted'); #test 5
-    
+
     chomp($text);
     my $page = $followme->read_page('index.html');
     ok(index($page, '<h2>Test</h2>') > 0, 'Generated title'); # test 6
@@ -75,20 +76,20 @@ do {
     foreach my $count (qw(first second third)) {
         my $file = "$count.md";
         $file = catfile($path, $file);
-        
+
         my $text = "$count blog post.\n";
         $followme->write_page($file, $text);
-        
+
         $followme->run($path);
         $file =~ s/md$/html/;
         sleep(1);
-        
+
         chomp($text);
         my $page = $followme->read_page($file);
         ok(index($page, "<p>$text</p>") > 0,
            "Generated $count blog post"); # test 8-10
     }
-    
+
     $path = catfile($test_dir, 'archive');
     my $file = catfile($path, 'index.html'); # test 11
     ok(-e $file, "archive index file created");
@@ -97,9 +98,9 @@ do {
         my $page = $followme->read_page($file);
         ok(index($page, "$dir/index.html") > 0,
            "Link to $dir directory"); # test 12,14
-        
+
         $path = catfile($path, $dir);
         $file = catfile($path, 'index.html');
         ok(-e $file, "$dir index file created"); # test 13,15
-    }    
+    }
 };
